--- a/WebWooden/appsettings.json
+++ b/WebWooden/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-VLQM3MM;Initial Catalog=wood;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;Application Intent=ReadWrite;MultiSubnetFailover=False;"
+    "DefaultConnection": "Data Source=DESKTOP-DLVA0EH;Initial Catalog=wood;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;Application Intent=ReadWrite;MultiSubnetFailover=False;"
   },
   "Logging": {
     "LogLevel": {
